2003-05-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12 released.

2003-05-02  Bruno Haible  <bruno@clisp.org>

	* config.rpath: Document limitation on IRIX.

2003-04-24  Bruno Haible  <bruno@clisp.org>

	* config.rpath: Update to libtool-1.5. Small changes for AIX, HP-UX,
	Irix, Linux, MacOS X, Windows.

2003-04-24  Bruno Haible  <bruno@clisp.org>

	* config.rpath: Don't set sys_lib_search_path_spec and
	sys_lib_dlsearch_path_spec.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	Support for relocatable installation.
	* INSTALL: Document --enable-relocatable and --with-libintl-prefix.

2003-02-22  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (ps, pdf): Remove rules, redundant with automake 1.7.2.

2003-02-12  Bruno Haible  <bruno@clisp.org>

	Extracted from gettext package.
	* configure.ac: New file.
	* Makefile.am: New file.
	* AUTHORS, COPYING, INSTALL, NEWS, README: New files.
	* m4/Makefile.am: New file.
	* tests/Makefile.am: New file.
	* tests/rpath-1: Move temporary directories down under tstdir.
	Rename global_top_srcdir to global_top_auxdir.
	* tests/rpath-2_a: Likewise.
	* tests/rpath-2_b: Likewise.
	* tests/rpath-3_a: Likewise.
	* tests/rpath-3_b: Likewise.
	* tests/rpath-2???: Use $srcdir instead of $top_srcdir/tests.
	* tests/rpath-3???: Likewise.
	* tests/rpathcfg.sh: Move temporary directories down under tstdir.
	Use $srcdir instead of $top_srcdir/tests.
	* tests/rpath*/Makefile.am: Use global_top_auxdir instead of
	global_top_srcdir.
	* tests/rpath*/configure.ac: Use AC_CONFIG_AUX_DIR instead of
	AC_CONFIG_AUX_DIRS; the latter is undocumented and doesn't work
	with automake-1.7.2.
